Added basic server files so that I can begin working on developing the functioning webpage

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "corknfork",
+  "name": "honkaifanpage",
   "version": "1.0.0",
   "description": "## Description",
   "main": "index.js",
@@ -8,15 +8,12 @@
     "dev": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "seed": "npm run seed --prefix server",
     "build": "vite build",
-    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@stripe/react-stripe-js": "^2.7.1",
-    "@stripe/stripe-js": "^3.5.0",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
     "mongoose": "^8.4.0",
@@ -25,7 +22,6 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
-    "stripe": "^15.9.0",
     "vite": "^5.2.11",
     "source-map-loader": "^1.0.0"
   }
