--- a/package.json
+++ b/package.json
@@ -1,28 +1,24 @@
 {
-  "name": "honkaifanpage",
-  "version": "1.0.0",
-  "description": "## Description",
-  "main": "index.js",
+  "name": "react-portfolio",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "install": " cd server && npm i && cd ../client && npm i",
-    "dev": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
-    "seed": "npm run seed --prefix server",
+    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "concurrently": "^8.2.2",
-    "dotenv": "^16.4.5",
-    "mongoose": "^8.4.0",
-    "node-fetch": "^3.3.2",
-    "punycode": "^2.3.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1",
-    "vite": "^5.2.11",
-    "source-map-loader": "^1.0.0"
+    "bootstrap": "^5.2.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@vitejs/plugin-react": "^3.1.0",
+    "vite": "^4.4.5"
   }
 }
